Add Restaurants data

--- a/Source/HackathonWeb/HackathonWeb.Tests/HackathonWeb.Tests.csproj
+++ b/Source/HackathonWeb/HackathonWeb.Tests/HackathonWeb.Tests.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -76,16 +76,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HackathonWeb\HackathonWeb.csproj">
-      <Project>{B8D0D272-AAFD-40A6-8307-AE75D03281D4}</Project>
-      <Name>HackathonWeb</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HackathonWeb\HackathonWeb.csproj">
+      <Project>{b8d0d272-aafd-40a6-8307-ae75d03281d4}</Project>
+      <Name>HackathonWeb</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
