test for map marker

--- a/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
+++ b/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PocController.cs" />
+    <Compile Include="Controllers\PocRestaurantMapController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -113,11 +114,20 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="OpenDataSource\Hotel.json" />
-    <None Include="OpenDataSource\MRTElevators.csv" />
-    <Content Include="OpenDataSource\res_tpe_opendata.csv" />
-    <None Include="OpenDataSource\SaveTrips.csv" />
+    <Resource Include="OpenDataSource\Hotel.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="OpenDataSource\MRTElevators.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="OpenDataSource\res_tpe_opendata.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="OpenDataSource\SaveTrips.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Content Include="Views\Poc\Index.cshtml" />
+    <Content Include="Views\PocRestaurantMap\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
