--- a/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
+++ b/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
@@ -87,12 +87,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
-    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PocController.cs" />
     <Compile Include="Controllers\PocRestaurantMapController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -101,9 +101,12 @@
     <Compile Include="Class\OpenDataStorage.cs" />
     <Compile Include="Models\Hotel.cs" />
     <Compile Include="Models\MRTElevator.cs" />
+    <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\Restaurant.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\product.css" />
+    <Content Include="Scripts\product.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -127,7 +130,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Content Include="Views\Poc\Index.cshtml" />
-    <Content Include="Views\PocRestaurantMap\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
