home/language views

--- a/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
+++ b/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
@@ -105,6 +105,45 @@
     <Compile Include="Models\Restaurant.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\assets\bg-green-01.png" />
+    <Content Include="Scripts\assets\btn-arrow.png" />
+    <Content Include="Scripts\assets\btn-comfirm.png" />
+    <Content Include="Scripts\assets\btn-pulldown.png" />
+    <Content Include="Scripts\assets\icon-check.png" />
+    <Content Include="Scripts\assets\icon-menu.png" />
+    <Content Include="Scripts\assets\icon-search.png" />
+    <Content Include="Scripts\assets\img-airport.png" />
+    <Content Include="Scripts\assets\img-airport_green.png" />
+    <Content Include="Scripts\assets\img-airport_yellow.png" />
+    <Content Include="Scripts\assets\img-dot_green.png" />
+    <Content Include="Scripts\assets\img-dot_yellow.png" />
+    <Content Include="Scripts\assets\img-elevator.png" />
+    <Content Include="Scripts\assets\img-gps_green.png" />
+    <Content Include="Scripts\assets\img-gps_yellow.png" />
+    <Content Include="Scripts\assets\img-homepage.png" />
+    <Content Include="Scripts\assets\img-hotel.png" />
+    <Content Include="Scripts\assets\img-hotel_green.png" />
+    <Content Include="Scripts\assets\img-hotel_yellow.png" />
+    <Content Include="Scripts\assets\img-logo.png" />
+    <Content Include="Scripts\assets\img-metro.png" />
+    <Content Include="Scripts\assets\img-metro_green.png" />
+    <Content Include="Scripts\assets\img-metro_yellow.png" />
+    <Content Include="Scripts\assets\img-stage1_green.png" />
+    <Content Include="Scripts\assets\img-stage1_yellow.png" />
+    <Content Include="Scripts\assets\img-stage2_green.png" />
+    <Content Include="Scripts\assets\img-stage2_yellow.png" />
+    <Content Include="Scripts\assets\img-stage3_green.png" />
+    <Content Include="Scripts\assets\img-stage3_yellow.png" />
+    <Content Include="Scripts\assets\img-stage4_green.png" />
+    <Content Include="Scripts\assets\img-stage4_yellow.png" />
+    <Content Include="Scripts\assets\img-stage5_green.png" />
+    <Content Include="Scripts\assets\img-stage5_yellow.png" />
+    <Content Include="Scripts\assets\img-taxi.png" />
+    <Content Include="Scripts\assets\img-taxi_green.png" />
+    <Content Include="Scripts\assets\img-taxi_yellow.png" />
+    <Content Include="Scripts\assets\img-uber.png" />
+    <Content Include="Scripts\assets\img-underline_gray.png" />
+    <Content Include="Scripts\assets\img-underline_white.png" />
     <Content Include="Scripts\product.css" />
     <Content Include="Scripts\product.js" />
     <Content Include="Views\Web.config" />
