--- a/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
+++ b/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
@@ -125,10 +125,15 @@
     <Content Include="Scripts\assets\img-hotel.png" />
     <Content Include="Scripts\assets\img-hotel_green.png" />
     <Content Include="Scripts\assets\img-hotel_yellow.png" />
+    <Content Include="Scripts\assets\img-infomation_green.png" />
+    <Content Include="Scripts\assets\img-infomation_yellow-01.png" />
     <Content Include="Scripts\assets\img-logo.png" />
     <Content Include="Scripts\assets\img-metro.png" />
     <Content Include="Scripts\assets\img-metro_green.png" />
     <Content Include="Scripts\assets\img-metro_yellow.png" />
+    <Content Include="Scripts\assets\img-restaurant.png" />
+    <Content Include="Scripts\assets\img-restaurant_green.png" />
+    <Content Include="Scripts\assets\img-restaurant_yellow.png" />
     <Content Include="Scripts\assets\img-stage1_green.png" />
     <Content Include="Scripts\assets\img-stage1_yellow.png" />
     <Content Include="Scripts\assets\img-stage2_green.png" />
@@ -140,13 +145,18 @@
     <Content Include="Scripts\assets\img-stage5_green.png" />
     <Content Include="Scripts\assets\img-stage5_yellow.png" />
     <Content Include="Scripts\assets\img-taxi.png" />
+    <Content Include="Scripts\assets\img-taxiinfo-01.png" />
     <Content Include="Scripts\assets\img-taxi_green.png" />
+    <Content Include="Scripts\assets\img-taxi_info.png" />
     <Content Include="Scripts\assets\img-taxi_yellow.png" />
+    <Content Include="Scripts\assets\img-uber-info.png" />
     <Content Include="Scripts\assets\img-uber.png" />
     <Content Include="Scripts\assets\img-underline_gray.png" />
     <Content Include="Scripts\assets\img-underline_white.png" />
+    <Content Include="Scripts\assets\mrt-Zhongshan.png" />
     <Content Include="Scripts\key-pic\elevator-airport.jpg" />
     <Content Include="Scripts\key-pic\elevator-metro.jpg" />
+    <Content Include="Scripts\key-pic\ZhongSangElevator.jpg" />
     <Content Include="Scripts\product.css" />
     <Content Include="Scripts\product.js" />
     <Content Include="Views\Web.config" />
