--- a/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
+++ b/Source/HackathonWeb/HackathonWeb/HackathonWeb.csproj
@@ -147,6 +147,7 @@
     <Content Include="Scripts\assets\img-uber.png" />
     <Content Include="Scripts\assets\img-underline_gray.png" />
     <Content Include="Scripts\assets\img-underline_white.png" />
+    <Content Include="Scripts\assets\t2-f2.png" />
     <Content Include="Scripts\key-pic\elevator-airport.jpg" />
     <Content Include="Scripts\key-pic\elevator-metro.jpg" />
     <Content Include="Scripts\product.css" />
